syntax = "proto3";

import "common.proto";
option java_package = "ca.wisecode.lucene.grpc.models";
option java_outer_classname = "ActuatorProto";
option java_multiple_files = true;

service ActuatorService {
    rpc health (HealthInOut) returns (HealthInOut) {}
}

message HealthInOut {
    string host = 1;
    int32 port = 2;
    int32 serverPort = 3;
    int32 state = 4;
    int32 docsTotal = 5;
    string indexPath = 6;
    string msg = 7;
}

